Style the new project button and fix spacing.  Close #7

--- a/flaskr/static/stickyFooter.css
+++ b/flaskr/static/stickyFooter.css
@@ -14,3 +14,7 @@ html {
     line-height: 60px; /* Vertically center the text there */
     background-color: #343a40!important;
   }
+
+  #footerSpacer {
+      height: 1rem;
+  }
